# 2026_KRAC

./: .gitignore  README.md
quad_test/src/flight/: CMakeLists.txt  package.xml
quad_test/src/flight/src/: flight_test.cpp  gps_test.cpp
rescue_system/: rescue_sequence_node.py
src/: build_and_run_person_detector.sh  run_person_detector.sh
src/imagery_processing/: setup.py
src/imagery_processing/imagery_processing/: following_recognition.py  marker_recognition.py  marker_recognition_vtol.py  marker_recognition_x500.py
src/multiroter/: CMakeLists.txt
src/multiroter/src/: flight.cpp  flight_test.cpp  following_flight.cpp  land_test.cpp  position_mode.cpp
src/quad_test/: README.md
src/quad_test/src/flight/: CMakeLists.txt
src/rescue_system/: README.py  gcs_button_gui.py  rescue_sequence_node.py
src/stack/: README.md
src/stack/src/stack_cpp/: CMakeLists.txt  package.xml
src/stack/src/stack_cpp/include/stack_cpp/: mission_manager.h
src/stack/src/stack_cpp/launch/: mission.launch.py
src/stack/src/stack_cpp/src/: flight.cpp  gripper.cpp  logger.cpp  mission.cpp  mission_manager.cpp  target.cpp
src/stack/src/stack_py/: setup.py
src/stack/src/stack_py/stack_py/: marker.py  mission_gui.py  mission_manager.py  vision.py  yolo.py
src/streaming_test/: package.xml  setup.cfg  setup.py
src/streaming_test/streaming_test/: streaming_node.py
stack/: README.md
stack/src/mission_gui/: package.xml  setup.cfg  setup.py
stack/src/mission_launch/: package.xml  setup.cfg  setup.py
stack/src/mission_launch/config/: flight.yaml  trajectory.yaml
stack/src/mission_launch/launch/: mission.launch.py
stack/src/stack_cpp/: CMakeLists.txt
stack/src/stack_cpp/src/: flight.cpp  mission.cpp  mission_manager.cpp  target.cpp
stack/src/stack_py/stack_py/: gripper.py  kalman.py  marker.py  vision.py
